# phys_simulator

./: .gitignore  pyproject.toml  setup.py  simulate_traj.py
simulator/: __init__.py  simulator.py
simulator/urdfs/pen_holder/: pen_holder.urdf
simulator/urdfs/robot_arm/: iscoin_gripper.urdf
