[project]
name = "simulator"
version = "0.1.0"
description = "A package to simulate the ur3e robot arm physics for security usages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pybullet>=3.2.7",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "simulator",
]

[tool.uv.sources]
simulator = { workspace = true }
